[gd_scene load_steps=9 format=3 uid="uid://b3g6xpu7pchk7"]

[ext_resource type="Texture2D" uid="uid://bc3yiesalklmd" path="res://Background.png" id="1_iynnj"]
[ext_resource type="Script" uid="uid://coo7mpsvcjqha" path="res://ModeSelection.gd" id="1_yrymw"]
[ext_resource type="Texture2D" uid="uid://k0dctlkvytgf" path="res://capybalancelogo.png" id="2_l782h"]
[ext_resource type="Texture2D" uid="uid://brldpkw2rdwkh" path="res://height challenge button.png" id="3_yrymw"]
[ext_resource type="Texture2D" uid="uid://lit1l4qsorqj" path="res://endless stack button.png" id="4_3e2kj"]
[ext_resource type="Texture2D" uid="uid://bohxlb1va11bs" path="res://settings button.png" id="5_xdvy6"]
[ext_resource type="Texture2D" uid="uid://cmlftdl7w58pn" path="res://back button.png" id="6_l782h"]
[ext_resource type="FontFile" uid="uid://dv6rxjsqf5lyn" path="res://PressStart2P.ttf" id="8_3e2kj"]

[node name="ModeSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yrymw")

[node name="Background" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1197.0
offset_top = -3.0
offset_right = -940.0
offset_bottom = 417.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00516, 0.994561)
texture = ExtResource("1_iynnj")
expand_mode = 3

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -1100.0
offset_top = 21.0
offset_right = 925.0
offset_bottom = 2046.0
scale = Vector2(0.573986, 0.604417)
texture = ExtResource("2_l782h")

[node name="HeightChallengeButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -899.0
offset_top = 1261.0
offset_right = 721.0
offset_bottom = 2881.0
scale = Vector2(0.45806, 0.367463)
theme_override_constants/separation = 30

[node name="HeightChallengeButton" type="TextureButton" parent="HeightChallengeButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_yrymw")

[node name="EndlessStackButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -905.0
offset_top = 1483.0
offset_right = 715.0
offset_bottom = 2233.0
scale = Vector2(0.470233, 0.374936)

[node name="EndlessStackButton" type="TextureButton" parent="EndlessStackButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_3e2kj")

[node name="SettingsButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -217.0
offset_top = 152.0
offset_right = 1403.0
offset_bottom = 902.0
scale = Vector2(0.173692, 0.170153)

[node name="SettingsButton" type="TextureButton" parent="SettingsButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("5_xdvy6")

[node name="BackButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -1004.0
offset_top = 161.0
offset_right = 616.0
offset_bottom = 911.0
scale = Vector2(0.156244, 0.139612)

[node name="BackButton" type="TextureButton" parent="BackButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("6_l782h")

[node name="GameModeText" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="GameModeText"]
layout_mode = 0
offset_left = -1011.0
offset_top = 1118.0
offset_right = -21.0
offset_bottom = 1267.0
theme_override_colors/font_color = Color(1, 0.788235, 0.0823529, 1)
theme_override_colors/font_shadow_color = Color(0.568973, 0.568973, 0.568973, 1)
theme_override_fonts/font = ExtResource("8_3e2kj")
theme_override_font_sizes/font_size = 90
text = "SELECT MODE"
